inbox overlapping fix

--- a/src/other.css
+++ b/src/other.css
@@ -108,9 +108,18 @@
   
   /* "center" Vencord Toolbox button */
   .vc-toolbox-btn,[aria-label="Vencord Toolbox"]{
-    right: 8px;
+    right: 6px;
   }
-  /* make search bar smaller */
+  /* make search bar smaller and inbox overlapping fix */
   .searchBar_c322aa{
     max-width: 185px;
+    margin-right: 32px;
+  }
+  /* inbox and "New Group DM" buttons overlapping fix */
+  .inviteToolbar__133bf{
+    margin-right: 32px;
+  }
+  /* inbox button and Orbs overlapping fix */
+  .container__44ee9{
+    margin-right: 32px;
   }
